@@ -14,6 +14,7 @@ Changes
 - support for task-result dependency #438174
 - added sub-command ignore task
 - added command line option --outfile. write output to specified file path
+- added support for passing arguments to tasks on cmd line
 
 
 0.4.0 (*2009-10-05*)
